mv baustyle logo

--- a/packages/react-components/stories/0-overview.stories.mdx
+++ b/packages/react-components/stories/0-overview.stories.mdx
@@ -1,5 +1,5 @@
 import { Meta, Subtitle } from '@storybook/addon-docs/blocks'
-import baustyle from './images/baustyle.svg'
+import baustyle from '../../../imgs/baustyle.svg'
 import {Image} from '../src'
 
 <Meta title="Foundations/Overview" />
