--- a/packages/react-components/stories/0-overview.stories.mdx
+++ b/packages/react-components/stories/0-overview.stories.mdx
@@ -15,7 +15,7 @@ import {Image, Box} from '../src'
   Baustyle is a set of theme agnostic react components.
 </Subtitle>
 
-## What doese it build on.
+## What does it build on.
 Library builds upon Typescript, React, [Styled System](https://styled-system.com/) and [Styled Components](https://styled-components.com/), and relies on a `theme` object
 extended out of [System UI Theme Specification](https://system-ui.com/theme/) 
 
