--- a/packages/react-components/stories/0-overview.stories.mdx
+++ b/packages/react-components/stories/0-overview.stories.mdx
@@ -12,7 +12,7 @@ import {Image, Box} from '../src'
 # Baustyle
 
 <Subtitle>
-  Baustyle is a set of theme agnostic react components.
+  Multivariant extentable React UI Components, with focus on accebility and performance.
 </Subtitle>
 
 ## What does it build on.
@@ -20,7 +20,7 @@ Library builds upon Typescript, React, [Styled System](https://styled-system.com
 extended out of [System UI Theme Specification](https://system-ui.com/theme/) 
 
 
-## Install
+## Install.
 
 you need already to have preinstalled `styled-components`, `styled-system` and optionally `@styled-system/css`
 
