--- a/packages/react-components/stories/0-overview.stories.mdx
+++ b/packages/react-components/stories/0-overview.stories.mdx
@@ -12,7 +12,7 @@ import {Image, Box} from '../src'
 # Baustyle
 
 <Subtitle>
-  Multivariant extentable React UI Components, with focus on accebility and performance.
+  Multivariant extendable React UI Components, with focus on accebility and performance.
 </Subtitle>
 
 ## What does it build on.
