--- a/packages/react-components/stories/1-tokens-typography.stories.mdx
+++ b/packages/react-components/stories/1-tokens-typography.stories.mdx
@@ -1,6 +1,6 @@
 import {Meta, Typeset} from '@storybook/addon-docs/blocks'
 import {ThemeProvider} from 'styled-components'
-import theme from './themes.ts'
+import theme from './theme.ts'
 import {Heading, Text, Flex, Box} from '../src'
 
 
