--- a/packages/react-components/stories/3-tokens-animation.draftstories.mdx
+++ b/packages/react-components/stories/3-tokens-animation.draftstories.mdx
@@ -1,7 +1,7 @@
 import {Meta, Subtitle} from '@storybook/addon-docs/blocks'
 import {InputTransitionEasing, ShakeAnimation} from './animations';
 import {ThemeProvider} from 'styled-components';
-import theme from './themes'
+import theme from './theme'
 
 <Meta title="Foundations/Animation Tokens" />
 
