--- a/packages/react-components/stories/2-tokens-color.stories.mdx
+++ b/packages/react-components/stories/2-tokens-color.stories.mdx
@@ -122,7 +122,7 @@ Color scheme is composed for both `light` and `dark` modes.
 
 ## Dark
 <ColorPalette>
-  {palette({...theme.colors, ...theme.colors.mode.dark}).map(colorItem => (
+  {palette({...theme.colors, ...theme.colors.modes.dark}).map(colorItem => (
     <ColorItem key={colorItem.title} {...colorItem} />
   ))}
 </ColorPalette>
